install: Add missing services to migration script
Adds support for the statisticsDomain and for multiple gsidcap, gridftp,
kerberosftp, kerberosdcap and weakftp doors.

Removes some unused code from services.sh.

Target: trunk
Target: 1.9.7
Acked-by: Paul Millar <paul.millar@desy.de>
Patch: http://rb.dcache.org/r/1662/